--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Header start -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -23,7 +24,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects </h1>
-                <p class="banner-discription">There are many variations of passages of Lorem Ipsum available, but the
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look
                     even</p>
@@ -34,9 +35,32 @@
         </div>
 
     </header>
-
+    <!-- Header End -->
 
     <main>
+        <!-- Featurs section start -->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="/images/team2.png" alt="">
+                <img src="/images/team3.png" alt="">
+                <img src="/images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h2 class="teams-title"><span class="quick-list text-light-gray ">Quick list</span> <span>of
+                        Our</span><span class="text-features"> Features</span></h2>
+                <p class="text-light-gray ">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have
+                    suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+
+            <!-- Part 2 -->
+            <div>
+
+            </div>
+        </section>
 
     </main>
 
