--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Header start -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -38,7 +38,7 @@
     <!-- Header End -->
 
     <main>
-        <!-- Featurs section start -->
+        <!-- Teams section start -->
         <section class="teams-container">
             <div class="teams-img-container">
                 <img src="images/team1.png" alt="">
@@ -55,10 +55,129 @@
                     alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
+        </section>
+        <!-- Teams section (End) -->
 
-            <!-- Part 2 -->
-            <div>
 
+        <!-- Features section (Start) -->
+        <section class="features">
+            <div class="features-content">
+                <h3 class="section-title">
+                    Features you will <br> love & enjoy
+                </h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have
+                    suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                <!-- 1 -->
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have
+                        suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+                <!-- 2 -->
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have
+                        suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+                <!-- 3 -->
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have
+                        suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+                <!-- 4 -->
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have
+                        suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+            </div>
+
+            <div class="features-img">
+                <img src="images/architect.png" alt="">
+
+                <div class="ten-years-badge">
+                    <h2>10+ years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+            <!-- Badge -->
+
+
+        </section>
+        <!-- Features section (End) -->
+
+
+        <!-- Some Facts(Start) -->
+        <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+                have
+                suffered
+                alteration.</p>
+
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-status">54</h2>
+                    <p class="card-title text-light-gray">Awards Winnings</p>
+                </div>
+
+                <!-- card 2 -->
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-status">1458</h2>
+                    <p class="card-title text-light-gray">Project Finished</p>
+                </div>
+
+                <!-- card 3 -->
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-status">590</h2>
+                    <p class="card-title text-light-gray">Clients Worked</p>
+                </div>
+
+                <!-- card 4 -->
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-status">22578</h2>
+                    <p class="card-title text-light-gray">Email Send</p>
+                </div>
+
+            </div>
+        </section>
+        <!-- Some Facts(End) -->
+
+
+        <!-- Sponspors (Start) -->
+        <section class="sponspors">
+            <h3 class="section-title">Our Sponspors</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+                have
+                suffered
+                alteration.</p>
+
+            <div class="sponsors-img-container">
+                <img src="/images/sponsors/spotify.png" alt="">
+                <img src="/images/sponsors/amazon.png" alt="">
+                <img src="/images/sponsors/google.png" alt="">
+                <img src="/images/sponsors/telerama.png" alt="">
+                <img src="/images/sponsors/figma.png" alt="">
             </div>
         </section>
 
