--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
 
     </main>
 
-    <footer>
+    <footer class="foooter">
+        <p>All rights reserved copyright&copy;2023 startup landing page design</p>
 
     </footer>
 
